--- a/Aula3/README.adoc
+++ b/Aula3/README.adoc
@@ -53,7 +53,7 @@ ctime()
 
 A utilização do primeiro formato permite realizar a subtração direta de modo a obter a duração em segundos entre dois tempos. Assim, pretende-se desenvolver um main.py que contenha duas funções tic() e toc() à semelhança do https://www.mathworks.com/help/matlab/ref/tic.html[matlab].
 
-Escreva um programa que realize a medição do tempo que demorou a executar um ciclo que calcula a raiz quadrada dos números até 50 milhões. O programa deve imprimir a data atual ao iniciar e depois uma mensagem com o tempo que demorou a calcular as raízes quadradas.
+Escreva um programa que realize a medição do tempo que demorou a executar um ciclo que calcula a raiz quadrada dos números de 0 até 50 milhões. O programa deve imprimir a data atual ao iniciar e depois uma mensagem com o tempo que demorou a calcular as raízes quadradas.
 
 Usando o package colorama, implemente mensagens coloridas com a informação destacada, por exemplo:
 
