--- a/Aula5/README.adoc
+++ b/Aula5/README.adoc
@@ -169,7 +169,7 @@ Faça a segmentação do mesmo objeto (cor verde) desta vez usando o modelo de c
 Para converter de BGR para HSV
 [source,Python]
 ----------------
-mask = cv.cvtColor(frame, cv.COLOR_BGR2HSV)
+image_hsv = cv.cvtColor(image_rgb, cv2.COLOR_BGR2HSV)
 ----------------
 ====================
 
@@ -246,59 +246,43 @@ Partindo do _Ex3 b)_ e usando a funçao https://docs.opencv.org/2.4/modules/high
 3 d)
 ~~~~
 
-Implemente um programa que permite configurar leia uma imagem e a converta para HSV. Depois a imagem deverá ser mostrada com seis trackbars
+Implemente um programa que permita configurar a segmentação de cor. O programa deve executar a segmentação verificando quais os pixeis da imagem que estão dentro de certos limites mínimo e máximo. Estes limites deverão ser diferentes para cada canal de cor. O programa deve mostrar 6 trackbars no total, para configurar aqueles limites:
 
-Exercício 4 - Anotações em imagens
-----------------------------------
+    .. limite mínimo e máximo para o canal B (ou H)
+    .. limite mínimo e máximo para o canal G (ou S)
+    .. limite mínimo e máximo para o canal R (ou V)
 
-Por vezes é importante desenhar informação em cima de uma imagem, seja texto, figuras ou outros gráficos. O opencv disponibiliza várias funções para o efeito.
+De cada vez que o utilizador alterar uma trackbar o valor do limite correspondente altera-se, e portanto é preciso realizar nova segmentação e mostrar o resultado.
 
-4 a)
-~~~~
+A aplicação deve poder receber um argumento pela linha da comando que indique que deve operar com uma imagem HSV em vez da habitual BGR.
 
-Carregue a imagem atlascar.png e desenhe um círculo no seu centro com a função _cv2.circle_.
+A aplicação deve utilizar um dicionário python com informação sobre os limites das variáveis como descrito em baixo.
 
-4 b)
-~~~~
+[source,Bash]
+-----------------------------------------------------------------
+{'limits': {'B': {'max': 200, 'min': 100},
+            'G': {'max': 200, 'min': 100},
+            'R': {'max': 200, 'min': 100}}}
+-----------------------------------------------------------------
 
-Adicione o texto 'PARI' à imagem a vermelho usando a funçao _cv2.putText()_
+Quando termina a aplicaçao devera gravar um ficheiro _limits.json_ com o dicionario descrito em cima.
 
-Exercício 5 - Aquisição de video
---------------------------------
-
-O opencv também tem várias funções para lidar com vídeo. Ver https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_gui/py_video_display/py_video_display.html[estes tutoriais].
-
-[WARNING]
-====================
-Naturalmente só conseguirá ter acesso às imagens de uma câmara se o seu portátil tiver alguma com os drivers corretamente instalados. Normalmente a utilização de máquinas virtuais não permite a utilização de câmara. Pode também inserir uma câmara USB e tentar visualizá-la. Pode usar o software cheese para tentar primeiro perceber se a https://smallbusiness.chron.com/webcam-working-ubuntu-66873.html[câmara está a funcionar corretamente].
-====================
-
-5 a)
-~~~~
-Implemente um programa que faça a aquisição de uma imagem da câmara e depois faça o seu display.
+[TIP]
+============================================
+Exemplo para gravar um dicionário para um ficheiro json.
 
 [source,Python]
 -----------------------------------------------------------------
-#!/usr/bin/env python
-import cv2
-
-def main():
-    # initial setup
-    capture = cv2.VideoCapture(0)
-    window_name = 'A5-Ex5'
-    cv2.namedWindow(window_name,cv2.WINDOW_AUTOSIZE)
-
-    _, image = capture.read()  # get an image from the camera
-
-    # add code to show camera
-    # add code to wait for a key press
-
-if __name__ == '__main__':
-    main()
-
+file_name = 'limits.json'
+with open(file_name, 'w') as file_handle:
+    print('writing dictionary d to file ' + file_name)
+    json.dump(d, file_handle) # d is the dicionary
 -----------------------------------------------------------------
+============================================
 
-5 b)
-~~~~
-Adapte o exerćicio anterior de modo a implementar um programa que faça a aquisição e display contínuos da imagem da câmara do seu portátil.
+.A aplicação de segmentação de cor.
+[caption=""]
+image::docs/color_segmenter.png[]
+
+Aqui um exemplo da https://youtu.be/5ehqBuBWQZM[aplicação em funcionamento]
 
