--- a/README.adoc
+++ b/README.adoc
@@ -9,6 +9,10 @@
 
 image::docs/intro_image.png[]
 
+
+------------- | -------------
+<img align="center" src="https://github.com/lardemua/atom/blob/master/docs/VideosLar1" width="450"/>  | <img align="center" src="https://github.com/lardemua/atom/blob/master/docs/collect_data_agrob.gif" width="450"/>
+
 Toda a documentação referente às aulas estará colocada neste repositório. Não obstante, deve também ver consultar periodicamente a https://elearning.ua.pt/course/view.php?id=2011[página de elearning] da UC.
 Pode entrar em cada uma das pastas para ver os guiões. Utilize sempre a visualização
 do _README.adoc_ para se assegurar que está a visualizar a versão mais recente do documento.
