--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,7 @@ image::docs/intro_image.png[]
 
 
 ------------- | -------------
-<img align="center" src="https://github.com/lardemua/atom/blob/master/docs/VideosLar1" width="450"/>  | <img align="center" src="https://github.com/lardemua/atom/blob/master/docs/collect_data_agrob.gif" width="450"/>
+<img align="center" src="https://github.com/miguelriemoliveira/pari_20-21/blob/master/docs/VideosLAR1.gif" width="450"/>  | <img align="center" src="https://github.com/miguelriemoliveira/pari_20-21/blob/master/docs/MVI_3502.gif" width="450"/>
 
 Toda a documentação referente às aulas estará colocada neste repositório. Não obstante, deve também ver consultar periodicamente a https://elearning.ua.pt/course/view.php?id=2011[página de elearning] da UC.
 Pode entrar em cada uma das pastas para ver os guiões. Utilize sempre a visualização
