--- a/README.adoc
+++ b/README.adoc
@@ -8,6 +8,9 @@
 
 //image::docs/intro_image.png[]
 
+
+image::docs/VideosLAR1.gif[]
+
 [Atlascar2](https://github.com/lardemua/atlascar2)  | [Race Project](https://www.project-race.eu/)
 ------------- | -------------
 <img align="center" src="https://github.com/miguelriemoliveira/pari_20-21/blob/master/docs/VideosLAR1.gif" width="450"/>  | <img align="center" src="https://github.com/miguelriemoliveira/pari_20-21/blob/master/docs/MVI_3502.gif" width="450"/>
